[workspace]
resolver = "3"
members = ["crates/ruststream-lapin"]
# cargo-generate scaffolds: their sources carry `{{project-name}}` placeholders that are not valid
# Rust/TOML until rendered, so they stay out of the workspace.
exclude = ["templates"]

[workspace.package]
version = "0.5.2"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/powersemmi/ruststream-lapin"
authors = ["RustStream contributors"]

[workspace.dependencies]
ruststream-lapin = { path = "crates/ruststream-lapin" }

ruststream = { version = ">=0.5.2, <0.6.0", default-features = false }

lapin = { version = "4.10", default-features = false, features = ["tokio"] }
bytes = "1"
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = "0.1"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "deny"
missing_docs = "deny"
missing_debug_implementations = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_const_for_fn = "allow"
multiple_crate_versions = "allow"
redundant_pub_crate = "allow"
